Fix ref in Scroller component and scrollbar customization

--- a/src/styles/core/_scaffolding.scss
+++ b/src/styles/core/_scaffolding.scss
@@ -1,5 +1,3 @@
-@import '~reset-css/reset.css';
-
 html {
   height: 100%;
 
@@ -11,4 +9,17 @@ body {
 
   font-family: $font-family;
   font-size: 1rem;
+}
+
+@media (min-width: 481px) {
+  & {
+    ::-webkit-scrollbar {
+      width: rem(6px);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: rem(4px);
+      background: rgba(134, 134, 134, .5);
+    }
+  }
 }
